(lang dune 3.8)

(using melange 0.1)

(name hello-melange)

(license "MIT")

(maintainers <your_name>)

(authors <your_name>)

(homepage https://github.com/your/project)

(bug_reports https://github.com/your/project/issues)

(package
 (allow_empty)
 (name hello-melange)
 (synopsis "Melange project")
 (description "Minimal melange project"))
